--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  html: ^0.15.4
+  http: ^1.2.1
+  intl: ^0.18.1
+  logger: ^2.2.0
 
 dev_dependencies:
   flutter_test:
