--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
 org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
+MYAPP_UPLOAD_STORE_FILE=app/alerta_sudestada-upload.keystore
+MYAPP_UPLOAD_KEY_ALIAS=alerta_sudestada-upload
+MYAPP_UPLOAD_STORE_PASSWORD=estrella713
+MYAPP_UPLOAD_KEY_PASSWORD=estrella713
